# fake-uwsgi

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml  tests.yml
docs/: conf.py  global.rst  index.rst
docs/dev_guide/: adding_console_scripts.rst  contributing.rst  index.rst  python_classifiers.rst
docs/dev_guide/testing/: index.rst
src/fake-uwsgi/: __init__.py
src/fake-uwsgi/cli/: __init__.py  main.py
src/fake_uwsgi/: __init__.py
tests/: test_fake_uwsgi.py
