[metadata]
name = fake-uwsgi
url = https://github.com/digimach/fake-uwsgi
project_urls =
    Documentation = https://github.com/digimach/fake-uwsgi/blob/master/README.rst
    Source = https://github.com/digimach/fake-uwsgi
license = BSD-3-Clause
author = Digimach
author_email = kkanjee@digimach.com
maintainer = Digimach
maintainer_email = kkanjee@digimach.com
description = A Python module that attempts to fake out the uwsgi module exposed to uWSGI application. When testing applications outside uWSGI, for example Flask, this module can provide some functionality of the uwsgi module
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD-3-Clause
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fake-uwsgi = fake-uwsgi.cli:main
